Support META-INF/*.kotlin_module merging, Drop AGP < 8.0.0 support, Fix parallel tasks execution